--- a/task-scheduler/build.gradle
+++ b/task-scheduler/build.gradle
@@ -23,28 +23,26 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
     // --- LOMBOK ---
     compileOnly 'org.projectlombok:lombok:1.18.38'
     annotationProcessor 'org.projectlombok:lombok:1.18.38'
-
     // --- DATABASE ---
     runtimeOnly 'org.postgresql:postgresql:42.7.2'
-
     // --- JJWT (JSON Web Token) ---
     implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'
-
     // --- MAPSTRUCT ---
     implementation 'org.mapstruct:mapstruct:1.6.3'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-
+    // --- FEIGN CLIENT ---
+    implementation 'io.github.openfeign:feign-hc5:13.6'
     // --- SPRINGDOC (Swagger via OpenAPI UI) ---
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
-    implementation 'org.springdoc:springdoc-openapi-starter-common:2.8.8'
-
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+    implementation 'org.springdoc:springdoc-openapi-starter-common:2.8.9'
+    // --- APACHE COMMON ---
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
     // --- TEST DEPENDENCIES ---
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mockito:mockito-core:5.12.0'
