finished task scheduler configs

--- a/task-scheduler/build.gradle
+++ b/task-scheduler/build.gradle
@@ -18,6 +18,13 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
+    }
+}
+
+
 dependencies {
     // --- SPRING BOOT STARTERS ---
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -37,7 +44,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     // --- FEIGN CLIENT ---
-    implementation 'io.github.openfeign:feign-hc5:13.6'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     // --- SPRINGDOC (Swagger via OpenAPI UI) ---
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
     implementation 'org.springdoc:springdoc-openapi-starter-common:2.8.9'
